# accordmesh

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_initial.sql  0002_v0_1_completion.sql  0003_integration_recovery.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs  public_contract_tests.rs  reset.rs
apps/desktop/src-tauri/src/analysis/: mod.rs
apps/desktop/src-tauri/src/audio/: mod.rs
apps/desktop/src-tauri/src/auth/: mod.rs
apps/desktop/src-tauri/src/comparison/: mod.rs
apps/desktop/src-tauri/src/context/: mod.rs
apps/desktop/src-tauri/src/crypto/: mod.rs
apps/desktop/src-tauri/src/export/: mod.rs
apps/desktop/src-tauri/src/jobs/: mod.rs
apps/desktop/src-tauri/src/media/: mod.rs  runtime.rs
apps/desktop/src-tauri/src/platform/: mod.rs
apps/desktop/src-tauri/src/platform/macos/: mod.rs  system_audio.swift
apps/desktop/src-tauri/src/platform/windows/: mod.rs
apps/desktop/src-tauri/src/projects/: types.rs
apps/desktop/src-tauri/src/providers/: mod.rs  registry.rs  test_adapter.rs
apps/desktop/src-tauri/src/providers/mock/: mod.rs
apps/desktop/src-tauri/src/realtime/: mod.rs
apps/desktop/src-tauri/src/storage/: repository.rs
(+81 files in other folders)
