[package]
name = "accordmesh-desktop"
version = "0.1.0-alpha.2"
description = "AccordMesh desktop application"
authors = ["AccordMesh contributors"]
license = "Apache-2.0"
edition = "2021"
keywords = ["meeting", "transcription", "translation", "tauri", "privacy"]
categories = ["multimedia", "text-processing"]

[lib]
name = "accordmesh_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
dirs = "5"
jsonschema = "0.18"
mime_guess = "2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.0", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_System_Com", "Win32_System_Threading"] }

[features]
default = []
